--- a/src/app/checkout/components/checkout-payment/checkout-payment.component.html
+++ b/src/app/checkout/components/checkout-payment/checkout-payment.component.html
@@ -4,45 +4,77 @@
 <ng-container *ngFor="let paymentMethod of paymentMethods$ | async">
     <div class="row">
         <div class="col col-lg-6 offset-lg-3">
-            <h4>Pay with method "{{ paymentMethod.code }}"</h4>
+            <h4>
+                {{ "checkout.payment-title" | translate }} "{{
+                    paymentMethod.code
+                }}"
+            </h4>
             <div class="alert alert-info my-4" role="alert">
-                This is an example payment form. Do not use real card details!
+                {{ "checkout.payment-message" | translate }}
             </div>
         </div>
     </div>
-    <form class="payment-form mb-5" #paymentForm="ngForm" (submit)="completeOrder(paymentMethod.code)">
+    <form
+        class="payment-form mb-5"
+        #paymentForm="ngForm"
+        (submit)="completeOrder(paymentMethod.code)"
+    >
         <div class="input-group mb-3">
             <div class="input-group-prepend">
-        <span class="input-group-text">
-            <fa-icon icon="credit-card"></fa-icon>
-        </span>
+                <span class="input-group-text">
+                    <fa-icon icon="credit-card"></fa-icon>
+                </span>
             </div>
-            <input type="text" class="form-control"
-                   name="cardNumber"
-                   [required]="true"
-                   [(ngModel)]="cardNumber"
-                   placeholder="Credit card #">
+            <input
+                type="text"
+                class="form-control"
+                name="cardNumber"
+                [required]="true"
+                [(ngModel)]="cardNumber"
+                placeholder="{{ 'checkout.card-number' | translate }}"
+            />
         </div>
         <div class="input-group mb-3">
             <div class="input-group-prepend">
-                <label class="input-group-text" for="month">Expiry</label>
+                <label class="input-group-text" for="month">{{
+                    "checkout.expiry" | translate
+                }}</label>
             </div>
-            <select class="custom-select" id="month" name="expMonth" [(ngModel)]="expMonth" [required]="true">
-                <option selected [ngValue]="undefined">Month</option>
+            <select
+                class="custom-select"
+                id="month"
+                name="expMonth"
+                [(ngModel)]="expMonth"
+                [required]="true"
+            >
+                <option selected [ngValue]="undefined">
+                    {{ "checkout.month" | translate }}
+                </option>
                 <option *ngFor="let month of getMonths()" [ngValue]="month">
                     {{ month }}
                 </option>
             </select>
-            <select class="custom-select" id="year" name="expYear" [(ngModel)]="expYear" [required]="true">
-                <option selected [ngValue]="undefined">Year</option>
+            <select
+                class="custom-select"
+                id="year"
+                name="expYear"
+                [(ngModel)]="expYear"
+                [required]="true"
+            >
+                <option selected [ngValue]="undefined">
+                    {{ "checkout.year" | translate }}
+                </option>
                 <option *ngFor="let year of getYears()" [ngValue]="year">
                     {{ year }}
                 </option>
             </select>
         </div>
 
-        <button class="btn btn-primary btn-lg"
-                [disabled]="paymentForm.pristine || paymentForm.invalid">Complete order
+        <button
+            class="btn btn-primary btn-lg"
+            [disabled]="paymentForm.pristine || paymentForm.invalid"
+        >
+            {{ "checkout.complete-order" | translate }}
         </button>
     </form>
 </ng-container>
