--- a/src/app/checkout/components/checkout-shipping/checkout-shipping.component.html
+++ b/src/app/checkout/components/checkout-shipping/checkout-shipping.component.html
@@ -1,91 +1,153 @@
 <div class="accordion">
-    <div class="card" *ngIf="(signedIn$ | async) && (customerAddresses$ | async)?.length">
+    <div
+        class="card"
+        *ngIf="(signedIn$ | async) && (customerAddresses$ | async)?.length"
+    >
         <div class="card-header">
-            <button class="btn btn-light" (click)="step = 'selectAddress'">Select Address</button>
+            <button class="btn btn-light" (click)="step = 'selectAddress'">
+                {{ "checkout.select-address" | translate }}
+            </button>
         </div>
         <div class="card-body collapse" [class.show]="step === 'selectAddress'">
             <div class="d-flex flex-wrap">
-                <div class="customer-address"
-                     *ngFor="let address of customerAddresses$ | async"
-                     (click)="setShippingAddress(address)">
-                    <div class="address-line" *ngFor="let line of getLines(address)">
+                <div
+                    class="customer-address"
+                    *ngFor="let address of customerAddresses$ | async"
+                    (click)="setShippingAddress(address)"
+                >
+                    <div
+                        class="address-line"
+                        *ngFor="let line of getLines(address)"
+                    >
                         {{ line }}
                     </div>
                 </div>
                 <div class="d-flex align-items-end ml-3 mb-3">
-                    <button class="btn btn-secondary" (click)="createAddress()">Add new address</button>
+                    <button class="btn btn-secondary" (click)="createAddress()">
+                        {{ "checkout.add-new-address" | translate }}
+                    </button>
                 </div>
             </div>
         </div>
     </div>
     <div class="card" *ngIf="!(signedIn$ | async)">
         <div class="card-header">
-            <button class="btn btn-light" (click)="step = 'customerDetails'">Customer Details</button>
+            <button class="btn btn-light" (click)="step = 'customerDetails'">
+                {{ "checkout.customer-details" | translate }}
+            </button>
         </div>
-        <div class="card-body collapse" [class.show]="step === 'customerDetails'">
+        <div
+            class="card-body collapse"
+            [class.show]="step === 'customerDetails'"
+        >
             <form #customerForm="ngForm">
                 <div class="d-lg-flex">
-                    <input class="form-control"
-                           placeholder="First Name"
-                           name="firstName"
-                           [(ngModel)]="firstName"
-                           required>
-                    <input class="form-control"
-                           placeholder="Last Name"
-                           name="lastName"
-                           [(ngModel)]="lastName"
-                           required>
+                    <input
+                        class="form-control"
+                        placeholder="{{ 'account.firstname' | translate }}"
+                        name="firstName"
+                        [(ngModel)]="firstName"
+                        required
+                    />
+                    <input
+                        class="form-control"
+                        placeholder="{{ 'account.lastname' | translate }}"
+                        name="lastName"
+                        [(ngModel)]="lastName"
+                        required
+                    />
 
-                    <input class="form-control"
-                           placeholder="Email Address"
-                           name="emailAddress"
-                           [(ngModel)]="emailAddress"
-                           required>
+                    <input
+                        class="form-control"
+                        placeholder="{{ 'account.email' | translate }}"
+                        name="emailAddress"
+                        [(ngModel)]="emailAddress"
+                        required
+                    />
                 </div>
             </form>
 
-            <button class="btn btn-secondary mt-3"
-                    [disabled]="customerForm.invalid"
-                    (click)="setCustomerDetails()">Next</button>
+            <button
+                class="btn btn-secondary mt-3"
+                [disabled]="customerForm.invalid"
+                (click)="setCustomerDetails()"
+            >
+                {{ "global.next" | translate }}
+            </button>
         </div>
-
     </div>
-    <div class="card" *ngIf="!(signedIn$ | async) || (customerAddresses$ | async)?.length === 0">
+    <div
+        class="card"
+        *ngIf="
+            !(signedIn$ | async) || (customerAddresses$ | async)?.length === 0
+        "
+    >
         <div class="card-header">
-            <button class="btn btn-light"
-                    [disabled]="step === 'customerDetails'"
-                    (click)="step = 'editAddress'">Shipping Address</button>
+            <button
+                class="btn btn-light"
+                [disabled]="step === 'customerDetails'"
+                (click)="step = 'editAddress'"
+            >
+                {{ "checkout.shipping-address" | translate }}
+            </button>
         </div>
         <div class="card-body collapse" [class.show]="step === 'editAddress'">
-            <vsf-address-form #addressForm
-                              [address]="shippingAddress$ | async"
-                              [availableCountries]="availableCountries$ | async"></vsf-address-form>
-            <button class="btn btn-secondary mt-3"
-                    [disabled]="addressForm.addressForm.invalid"
-                    (click)="setShippingAddress(addressForm.addressForm.value)">Send to this address</button>
+            <vsf-address-form
+                #addressForm
+                [address]="shippingAddress$ | async"
+                [availableCountries]="availableCountries$ | async"
+            ></vsf-address-form>
+            <button
+                class="btn btn-secondary mt-3"
+                [disabled]="addressForm.addressForm.invalid"
+                (click)="setShippingAddress(addressForm.addressForm.value)"
+            >
+                {{ "checkout.send-to-address" | translate }}
+            </button>
         </div>
     </div>
     <div class="card">
         <div class="card-header">
-            <button class="btn btn-light"
-                    [disabled]="step !== 'selectMethod' || (eligibleShippingMethods$ | async)?.length === 0"
-                    (click)="step = 'selectMethod'">Shipping Method</button>
+            <button
+                class="btn btn-light"
+                [disabled]="
+                    step !== 'selectMethod' ||
+                    (eligibleShippingMethods$ | async)?.length === 0
+                "
+                (click)="step = 'selectMethod'"
+            >
+                {{ "checkout.shipping-method" | translate }}
+            </button>
         </div>
         <div class="card-body collapse" [class.show]="step === 'selectMethod'">
-            <div class="form-check" *ngFor="let method of eligibleShippingMethods$ | async">
-                <input class="form-check-input"
-                       type="radio"
-                       [(ngModel)]="shippingMethodId"
-                       [value]="method.id"
-                       [id]="method.id">
-                <label class="form-check-label shipping-method" [for]="method.id">
+            <div
+                class="form-check"
+                *ngFor="let method of eligibleShippingMethods$ | async"
+            >
+                <input
+                    class="form-check-input"
+                    type="radio"
+                    [(ngModel)]="shippingMethodId"
+                    [value]="method.id"
+                    [id]="method.id"
+                />
+                <label
+                    class="form-check-label shipping-method"
+                    [for]="method.id"
+                >
                     <div class="description">{{ method.name }}</div>
-                    <div class="price">{{ method.priceWithTax | formatPrice }}</div>
+                    <div class="price">
+                        {{ method.priceWithTax | formatPrice }}
+                    </div>
                 </label>
             </div>
-            <button class="btn btn-secondary mt-3"
-                    [disabled]="!shippingMethodId"
-                    (click)="proceedToPayment()">Proceed to payment</button>
+            <button
+                class="btn btn-secondary mt-3"
+                [disabled]="!shippingMethodId"
+                (click)="proceedToPayment()"
+            >
+                {{ "checkout.proceed-to-payment" | translate }}
+            </button>
         </div>
     </div>
 </div>
