--- a/src/app/checkout/components/checkout-sign-in/checkout-sign-in.component.html
+++ b/src/app/checkout/components/checkout-sign-in/checkout-sign-in.component.html
@@ -1,14 +1,19 @@
-<h2>Already have an account?</h2>
+<h2>{{ "account.already-have-account" | translate }}</h2>
 
 <div class="sign-in-row">
-    <vsf-sign-in [navigateToOnSuccess]="['/checkout', 'shipping']"
-                 [displayRegisterLink]="false"></vsf-sign-in>
-    <div class="or"><div>or</div></div>
+    <vsf-sign-in
+        [navigateToOnSuccess]="['/checkout', 'shipping']"
+        [displayRegisterLink]="false"
+    ></vsf-sign-in>
+    <div class="or">
+        <div>{{ "global.or" | translate }}</div>
+    </div>
     <div class="card guest">
         <div class="card-body d-flex align-items-center">
             <div>
-                <a class="btn btn-primary"
-                   [routerLink]="['./shipping']">Continue as guest</a>
+                <a class="btn btn-primary" [routerLink]="['./shipping']"
+                    >Continue as guest</a
+                >
             </div>
         </div>
     </div>
